arquivo template html.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <!-- <script src="js/while.js"></script> -->
     <!-- <script src="js/for.js"></script> -->
     <script src="js/funcoes.js"></script>
+    <!-- <script src="js/objetos.js"></script> -->
+    <!-- <script src="js/ArraysAssociativos.js"></script> -->
 </body>
 
 </html>
