--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
             <!-- EVENTO ONCLICK -->
             <label for="">EVENTO ONCHANGE</label>
-            <input type="button" name="botao" value="Envia" onClick="alert('Obrigado pelos Dados')"> 
+            <input type="button" name="botao" value="Enviar" onClick="alert('Obrigado pelos Dados')"> 
 
             <!-- EVENTO ONBLUR  -->
             <label for="">EVENTO ONBLUR</label>
