--- a/objetoString.html
+++ b/objetoString.html
@@ -8,10 +8,12 @@
     <script src="js/objetoString.js"></script>
 </head>
 <body>
-    <div>
-    <p name="inicio"></p>
-
+    <a name="inicio"></a>
+    <form action="" id="form1">
+        <label for="">Digite um valor:</label>
+        <input type="text" name="nome2" id="nome2" >
+        <input type="button" onclick="troca()" value="troca">
+    </form>
     
-    </div>
 </body>
 </html>
