criação do arquivo componente objeto string.

--- a/objetoString.html
+++ b/objetoString.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +8,13 @@
     <title>Document</title>
     <script src="js/objetoString.js"></script>
 </head>
+
 <body>
     <div>
-    <p name="inicio"></p>
+        <p name="inicio"></p><br/>
 
-    
+
     </div>
 </body>
+
 </html>
